<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/activity_senju"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/kakashi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:src="@drawable/hashiramasage" />

                <TextView
                    android:id="@+id/u_question_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/kakashi"
                    android:paddingLeft="@dimen/text_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/senju_q_1"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/senju_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/u_question_1"
                    android:layout_toRightOf="@id/kakashi"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/button">


                </Spinner>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:src="@drawable/itama" />

                <TextView
                    android:id="@+id/u_question_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image2"
                    android:paddingLeft="@dimen/text_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/senju_q_2"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/q2_radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/u_question_2"
                    android:layout_toRightOf="@id/image2"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/button">

                    <RadioButton
                        android:id="@+id/q2_butsuma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/butsuma" />

                    <RadioButton
                        android:id="@+id/q2_itama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itama" />

                </RadioGroup>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q2">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:src="@drawable/shadowclone" />

                <TextView
                    android:id="@+id/u_question_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image3"
                    android:paddingLeft="@dimen/text_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/senju_q_3"
                    android:textSize="20dp" />

                <LinearLayout
                    android:id="@+id/radiogroup3a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/u_question_3"
                    android:layout_toRightOf="@id/image3"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/button">


                    <RadioButton
                        android:id="@+id/q3_tobirama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/u_question_2"
                        android:text="@string/tobirama" />

                    <RadioButton
                        android:id="@+id/q3_hiruzen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hiruzen" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/checkbox3_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radiogroup3a"
                    android:layout_toRightOf="@id/image3"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/button">

                    <RadioButton
                        android:id="@+id/q3_jiraiya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jiraiya" />

                    <RadioButton
                        android:id="@+id/q3_nagato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nagato" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q3">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:src="@drawable/hashiramaplain" />

                <TextView
                    android:id="@+id/u_question_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image4"
                    android:paddingLeft="@dimen/text_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/senju_q_4"
                    android:textSize="20dp" />

                <LinearLayout
                    android:id="@+id/radio4_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/u_question_4"
                    android:layout_toRightOf="@id/image4"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/button">

                    <EditText
                        android:id="@+id/q4_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/u_question_4"
                        android:layout_marginRight="16dp"
                        android:layout_toRightOf="@id/image4"
                        android:hint="@string/enter_text"
                        android:paddingLeft="8dp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:onClick="Submit"
            android:text="@string/submit_button" />

    </RelativeLayout>

</ScrollView>
